# AI-Server-Sample

./: .env  .env.example  .env.exmple  .gitignore  API_List.md  README.md  docker-compose-all-cpu-user.yml  docker-compose-all-cpu.yml  docker-compose-all-cuda-user.yml  docker-compose-all-cuda.yml  docker-compose-cd.yml  docker-compose-ollama-cuda.yml  docker-compose-ollama.yml  docker-compose-server.yml  docker-compose.yml  dockerfile.fastapi  dockerfile.next  dockerfile.next-server  dockerfile.nextjs  dockerfile.nginx  nextjs.md  single-setup.sh
ai-server-docker-compose/: NOTE.md  docker-compose-all-cpu-dev.yml  docker-compose-all-cpu-single.yml  docker-compose-all-cuda-single.yml  docker-compose-ollama-cpu.yml  docker-compose-server.yml
docker-compose/: docker-compose-all-cpu-user.yml  docker-compose-server.yml  docker-compose.yml
dockerfile/: dockerfile.fastapi  dockerfile.mcp  dockerfile.nextjs  dockerfile.nginx  dockerfile.searxng
docs/: CICD.md  Docker.md  FastAPI.md  NextJS.md  Nginx.md  VM.md
fastapi/: .env  API_List.md  README.md  dev.ipynb  entrypoint.sh  main.py  pyproject.toml  pytest.ini
fastapi/ai_sample/ai_tools/: base.py
fastapi/ai_sample/api/: router.py
fastapi/ai_sample/api/chat/: __init__.py  views.py
fastapi/ai_sample/api/heartbeat/: __init__.py  views.py
fastapi/ai_sample/chain/: chat.py
fastapi/ai_sample/core/: app.py  settings.py
fastapi/ai_sample/mcp/: base.py
fastapi/ai_sample/prompt/: chatTemplate.py
fastapi/tests/: test_ai_chat.py  test_health.py
mcp/: README.md  dev.ipynb  entrypoint.sh  pyproject.toml  server.py
(+18 files in other folders)
